画像読み込みの模索

--- a/GLFWTest/GLFWTest.vcxproj
+++ b/GLFWTest/GLFWTest.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="GLFW\glfw3native.h" />
     <ClInclude Include="KHR\khrplatform.h" />
     <ClInclude Include="linmath.h" />
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
