--- a/GLFWTest/GLFWTest.vcxproj.filters
+++ b/GLFWTest/GLFWTest.vcxproj.filters
@@ -46,5 +46,8 @@
     <ClInclude Include="GLFW\glfw3native.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
