--- a/GLFWTest/GLFWTest.vcxproj.filters
+++ b/GLFWTest/GLFWTest.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="simple.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="anotherMain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -47,6 +53,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
